# udfly

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_BRIEF.md  LICENSE  README.en.md  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
docs/: icon-source.html
samples/fixtures/: fixture-mediation-application.udf  fixture-mediation-form-with-table.udf
samples/private/: README.md
src/: export.js  format.js  handoff.js  i18n.js  index.html  main.js  menu.js  parser.js  path.js  recent.js  render.js  styles.css  updater-ui.js  updater.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
test/: export.test.mjs  format.test.mjs  handoff.test.mjs  i18n.test.mjs  parser.test.mjs  path.test.mjs  recent.test.mjs  render.fidelity.test.mjs  render.security.test.mjs  render.standalone.test.mjs  render.test.mjs  updater.test.mjs
